Add filtering properties

--- a/HolidayWebApplication/Views/PropertyListing/ListProperties.cshtml
+++ b/HolidayWebApplication/Views/PropertyListing/ListProperties.cshtml
@@ -4,7 +4,9 @@
     ViewBag.Title = "Properties";
 }
 
-<h2>All properties</h2>
+
+<br />
+@await Component.InvokeAsync("Filter")
 <br />
 
 <div class="row">
