--- a/HolidayWebApplication/Views/PropertyListing/PropertyDetails.cshtml
+++ b/HolidayWebApplication/Views/PropertyListing/PropertyDetails.cshtml
@@ -30,7 +30,7 @@
             BookedDates: <br />
             @foreach (var BookedDate in Model.BookedDates)
             {
-                <i> - @BookedDate.ToString("dd/MM/yyyy")</i> <br />
+                <i> - @BookedDate.ToString("MM/dd/yyyy")</i> <br />
             }
         </div>
 
