Add partial view

--- a/HolidayWebApplication/Views/PropertyListing/ListProperties.cshtml
+++ b/HolidayWebApplication/Views/PropertyListing/ListProperties.cshtml
@@ -4,7 +4,6 @@
     ViewBag.Title = "Properties";
 }
 
-
 <br />
 @await Component.InvokeAsync("Filter")
 <br />
@@ -13,25 +12,7 @@
     @foreach (var property in Model)
     {
         <div class="col-sm-auto col-md-auto col-lg-auto">
-            <div class="card">
-
-                <div class="card-header">
-                    <h4>
-                        <a asp-controller="PropertyListing" asp-action="ViewPropertyDetails" asp-route-id=@property.Id>@property.Name</a>
-                    </h4>
-                </div>
-
-                <div class="card-body">
-                    <b>@property.Blurb</b> <br />
-                    Location: @property.Location <br />
-                    Number of bedrooms: @property.NumberOfBedrooms
-                </div>
-
-                <div class="card-footer">
-                    Cost per night: @property.CostPerNight.ToString("c")
-                </div>
-
-            </div>
+            <partial name="_PropertyCard" model=property />
         </div>
     }
 </div>
