--- a/HolidayWebApplication/Views/Shared/Components/Filter/Default.cshtml
+++ b/HolidayWebApplication/Views/Shared/Components/Filter/Default.cshtml
@@ -1,13 +1,22 @@
 ﻿<div>
     <form asp-action="ListAvailable" asp-controller="PropertyListing" method="get">
-        <label for="startDate">Start date:</label>
-        <input type="text" id="startDate" name="start" placeholder="MM/DD/YYY" />
+        <div>
+            <label for="startDate">Start Date:</label>
+            <input type="text" id="startDate" name="start" placeholder="YYYY-MM-DD" required />
 
-        <label for="endDate">End date:</label>
-        <input type="text" id="endDate" name="end" placeholder="MM/DD/YYYY" />
+            <label for="endDate">End Date:</label>
+            <input type="text" id="endDate" name="end" placeholder="YYYY-MM-DD" required />
 
-        <button type="submit">Search</button>
+            <button type="submit">Search</button>
+        </div>
+
 
         <div asp-validation-summary="All" class="text-danger"></div>
     </form>
 </div>
+
+@* <script>
+    $(function () {
+        $("#startDate, endDate").datepicker();
+    });
+</script> *@
