Add managing properties

--- a/HolidayWebApplication/Views/PropertyListing/ListProperties.cshtml
+++ b/HolidayWebApplication/Views/PropertyListing/ListProperties.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<PropertyListingModel>
+﻿@model IEnumerable<HolidayDomain.Entities.Property>
 
 @{
     ViewBag.Title = "Properties";
