--- a/HolidayWebApplication/Views/Shared/Components/Filter/Default.cshtml
+++ b/HolidayWebApplication/Views/Shared/Components/Filter/Default.cshtml
@@ -2,21 +2,14 @@
     <form asp-action="ListAvailable" asp-controller="PropertyListing" method="get">
         <div>
             <label for="startDate">Start Date:</label>
-            <input type="text" id="startDate" name="start" placeholder="YYYY-MM-DD" required />
+            <input type="date" id="startDate" name="start" required />
 
             <label for="endDate">End Date:</label>
-            <input type="text" id="endDate" name="end" placeholder="YYYY-MM-DD" required />
+            <input type="date" id="endDate" name="end" required />
 
             <button type="submit">Search</button>
         </div>
 
-
         <div asp-validation-summary="All" class="text-danger"></div>
     </form>
 </div>
-
-@* <script>
-    $(function () {
-        $("#startDate, endDate").datepicker();
-    });
-</script> *@
