--- a/HolidayWebApplication/Views/Shared/Components/Filter/Default.cshtml
+++ b/HolidayWebApplication/Views/Shared/Components/Filter/Default.cshtml
@@ -2,10 +2,10 @@
     <form asp-action="ListAvailable" asp-controller="PropertyListing" method="get">
         <div>
             <label for="startDate">Start Date:</label>
-            <input type="date" id="startDate" name="start" required />
+            <input type="date" id="startDate" name="start" min="@DateTime.Now.ToString("yyyy-MM-dd")" required/>
 
             <label for="endDate">End Date:</label>
-            <input type="date" id="endDate" name="end" required />
+            <input type="date" id="endDate" name="end" min="@DateTime.Now.AddDays(1).ToString("yyyy-MM-dd")" required />
 
             <button type="submit">Search</button>
         </div>
