--- a/HolidayWebApplication/Views/Shared/_Layout.cshtml
+++ b/HolidayWebApplication/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PropertyListing" asp-action="ListAll">Properties</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PropertyManagement" asp-action="Register">Register new property</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
