--- a/HolidayWebApplication/Views/Booking/CreateBooking.cshtml
+++ b/HolidayWebApplication/Views/Booking/CreateBooking.cshtml
@@ -13,10 +13,11 @@
     @Html.HiddenFor(model => model.EndDate)
 
     <label for="UserEmail">Email address</label>
-    <input type="email" id="UserEmail" name="UserEmail" required />
+    <input type="email" id="UserEmail" name="UserEmail" class="form-control" required />
 
     <label for="BillingAddress">Billing address</label>
-    <input type="text" id="BillingAddress" name="BillingAddress" required />
+    <input type="text" id="BillingAddress" name="BillingAddress" class="form-control" required />
+    <br />
 
-    <button type="submit">Submit booking</button>
+    <button type="submit" class="btn btn-primary">Submit booking</button>
 </form>
