--- a/HolidayWebApplication/Views/PropertyManagement/AddImage.cshtml
+++ b/HolidayWebApplication/Views/PropertyManagement/AddImage.cshtml
@@ -11,9 +11,8 @@
     <input type="hidden" name="propertyId" value="@Model.PropertyId" />
 
     <label for="image">Choose image:</label>
-    <input type="file" id="image" name="image" />
-    <br />
+    <input type="file" id="image" name="image" class="form-control" />
     <br />
 
-    <button type="submit">Upload image</button>
+    <button type="submit" class="btn btn-primary">Upload image</button>
 </form>
