--- a/HolidayWebApplication/Views/PropertyManagement/Register.cshtml
+++ b/HolidayWebApplication/Views/PropertyManagement/Register.cshtml
@@ -38,5 +38,5 @@
     </div>
 
     <br />
-    <button type="submit">Register property</button>
+    <button type="submit" class="btn btn-primary">Register property</button>
 </form>
