--- a/HolidayWebApplication/Views/Shared/_Layout.cshtml
+++ b/HolidayWebApplication/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PropertyManagement" asp-action="Register">Register new property</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Index">My bookings</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
