--- a/HolidayWebApplication/Views/Account/Index.cshtml
+++ b/HolidayWebApplication/Views/Account/Index.cshtml
@@ -3,10 +3,10 @@
 @model IEnumerable<Booking>
 
 @{
-    ViewBag.Title = "Your bookings";
+    ViewBag.Title = "My bookings";
 }
 
-<h2>Your bookings</h2>
+<h2>My bookings</h2>
 <br />
 
 <div class="row">
