--- a/HolidayWebApplication/Views/PropertyListing/PropertyDetails.cshtml
+++ b/HolidayWebApplication/Views/PropertyListing/PropertyDetails.cshtml
@@ -28,7 +28,14 @@
     <div class="card">
         <div class="card shadow-sm">
 
-            <img class="bd-placeholder-img card-img-top" height="225" src="@Model.Images.FirstOrDefault()" alt="Property Image" />
+            @if (Model.Images.Any())
+            {
+                <img class="bd-placeholder-img card-img-top" height="225" src="@Model.Images.First()" alt="Property Image" />
+            }
+            else
+            {
+                <p>No image available</p>
+            }
 
             <div class="card-header">
                 <h4>@Model.Name</h4>
@@ -43,6 +50,13 @@
             </div>
         </div>
     </div>
+</div>
+<br />
+
+<div>
+    <form method="post" asp-controller="PropertyManagement" asp-action="AddImage" asp-route-id=@Model.Id>
+        <button type="submit">Add image</button>
+    </form>
 </div>
 
 <script>
